--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,99 +1,32 @@
-  <div class="input-holder">
-    <!-- <form
-      [formGroup]="formLogin"
-      class="d-flex flex-column justify-content-center"   >
-      <div class="form-group">
-        <label for="email" class="mt-4">Login </label>
-        <input
-          type="email"
-          class="form-control shadow-none"
-          formControlName="emailAddress"
-          id="email"
-          required
-          [ngClass]="{
-            errorInput:
-              formLogin.controls.emailAddress.invalid &&
-              (formLogin.controls.emailAddress.dirty ||
-                formLogin.controls.emailAddress.touched)
-          }"
-        />
-        <div
-          class="session-alert"
-          *ngIf="
-            formLogin.controls &&
-            (formLogin.controls.emailAddress.dirty ||
-              formLogin.controls.emailAddress.touched)
-          "
-          class="session-alert"
-        >
-          <div
-            class="alert-danger"
-            *ngIf="formLogin.controls.emailAddress.invalid"
-          >
-            Login obrigatório!
-          </div>
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="password" class="mt-4">Senha</label>
-        <div class="Password-container mb-1">
-          <input
-            type="password"
-            class="form-control shadow-none"
-            id="password"
-            formControlName="password"
-            placeholder="Senha"
-            required
-            [type]="show_eye ? 'text' : 'password'"
-            [ngClass]="{
-              errorInput:
-                formLogin.controls.password.invalid &&
-                (formLogin.controls.password.dirty ||
-                  formLogin.controls.password.touched)
-            }"
-          />
-          <div
-            class="session-alert"
-            *ngIf="
-              formLogin.controls.password.invalid &&
-              (formLogin.controls.password.dirty ||
-                formLogin.controls.password.touched)
-            "
-            class="session-alert"
-          >
-            <div
-              class="alert-danger"
-              *ngIf="formLogin.controls.password.invalid"
-            >
-              Senha obrigatória!
-            </div>
-          </div>
-          <img
-            class="viewPassword"
-            (click)="show_eye = !show_eye"
-            [src]="!show_eye ? 'assets/img/Hide.svg' : 'assets/img/Unhide.svg'"
-            alt=""
-          />
-        </div>
-      </div>
-      
-      <div class="d-flex juntify-content-between">
-          <input type="checkbox" aria-label="Checkbox for following text input">
-        <span> Lembrar-me </span> 
-        <a href="login/esqueci-minha-senha" class="forgot mt-3 text-left"
-          >Esqueceu a senha?</a>
-      </div>
-      <button
-        type="submit"
-        class="btn btn-primary btn-block"
-        [disabled]="!formLogin.valid"
-        class="button mt-4"
-        id="cursor-pointer"
-      >
-        <span class="d-flex align-items-center justify-content-center">
-          Entrar
-        </span>
-      </button>
-    </form> -->
-  </div>
- 
+<div class="input-holder">
+  <form [formGroup]="formLogin" class="d-flex flex-column justify-content-center" (ngSubmit)="submit()">
+    <img src="assets/img/login.png" alt="" class="img-login" />
+    <hr class="me-2 ms-1 mt-0 mb-5" />
+    
+    <mat-form-field appearance="outline">
+      <mat-label>E-mail</mat-label>
+      <input matInput formControlName="emailAddress" id="login" class="input-style">
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Senha</mat-label>
+      <mat-icon matSuffix style="cursor: pointer;" (click)="show_eye = !show_eye">
+        {{!show_eye ?'visibility':'visibility_off'}}</mat-icon>
+      <input matInput id="senha" formControlName="password" type="{{!show_eye ?'text':'password'}}">
+    </mat-form-field>
+
+    <div class="w-100 d-flex justify-content-between mb-4">
+      <label class="check-holder">Lembrar-me
+        <input type="checkbox">
+        <span class="checkmark"></span>
+      </label>
+      <a href="/" class="forgot fw-bold">Esqueceu a senha?</a>
+    </div>
+    <button type="submit" class="btn btn-submit mt-4 fw-bold" id="cursor-pointer">
+      Entrar
+    </button>
+    <div class="d-flex align-items-center justify-content-center mt-2">
+      <span > Não tem uma conta? </span>
+      <span class="ms-1 fw-bold"> Cadastre-se</span>
+    </div>
+  </form>
+</div>
