--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -1,105 +1,21 @@
-.input-holder {
-    display: flex;
-    flex-direction: column;
-    justify-content:center;
-    align-items:center;
-    
-  label {
-    font-weight: 600;
-  }
-  .form-group {
-    width: 100%;
-  }
-  input {
-    border-radius: 4px;
-    width: 100%;
-    height: 38px;
-    padding: 15px;
-    height: 45px;
-    border: none;
-    outline: none;
-    font-size: 15px;
-    border: 1px solid ;
-    background: #fff 0 0 no-repeat padding-box;
-
-    &.errorInput {
-      border-color: red;
-    }
-    &.touched {
-      box-shadow: 60px 60px 99px #00000045;
-      border-radius: 47px;
-    }
-    
-  }
-
-  button {
-    background:  0 0 no-repeat padding-box;
-    box-shadow: 0px 2px 6px;
-    border: none;
-    padding: 10px;
-    width: 100%;
-    height: 38px;
-    border-radius: 4px;
-    text-transform: uppercase;
-    text-align: left;
-    font-size: 16px;
-    font-weight: 500;
-    letter-spacing: 0px;
-    color: #fff;
-    opacity: 1;
-    cursor: pointer;
-
-    &:disabled {
-      opacity: 1px;
-    }
-  }
-
-  .Password-container {
-    position: relative;
-    .viewPassword {
-      position: absolute;
-      width: 40px;
-      right: 5px;
-      top: 4px;
-      cursor: pointer;
-    }
-  }
-
-  .session-alert {
-    padding: 0px 1% 0px 2%;
-
-    > .alert-danger {
-      margin-bottom: -06px;
-      border-radius: 1px;
-      opacity: 1px;
-      height: 30px;
-      padding: 0px;
-
-      span {
-        text-align: left;
-        font-size: 12px;
-        font-weight: 600;
-        letter-spacing: 0px;
-        color: red;
-        opacity: 1px;
-      }
-    }
-  }
-
-  .spinner {
-    margin-top: -60px;
-    color: red ;
-  }
-
-  .forgot {
-    float: left;
-    color:red ;
-    font-weight: bold;
-    padding-top: 5px;
-    text-decoration: none;
-  }
+form {
+    width: 384px;
 }
 
-.side-img{
-    justify-content: end;
+.img-login {
+    width : 99px;
+    height: 51px;
+}
+
+.btn-submit {
+    background: #260f41;
+    color     : #fff;
+    height    : 54px;
+    &::before {
+        background-color: #48276e;
+    }
+}
+.forgot{
+    text-decoration: none;
+    color: #000;
 }
