preparando ambiente dashboard

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,14 @@
-<p>dashboard works!</p>
+<div class="background">
+     
+ <div class="session-nav">
+    <div class="header-menu">
+        <div class="menu-drop">
+             <app-menu-dropdown></app-menu-dropdown> 
+        </div>
+        <div class="user-drop">
+             <app-user-drop> </app-user-drop> 
+        </div>
+    </div>
+</div>
+
+</div>
