visualização para mobile

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -8,7 +8,7 @@
                <router-outlet></router-outlet>
            </div>    
        </div>
-        <div class="side-img">
+        <div class="side-img" *ngIf="!isMobile">
             <img src="assets/img/login-img-2x.png">
         </div>    
     </div>
