--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -1,3 +1,5 @@
+@import "../../assets/scss/breakpoints.scss";
+
 .login-place {
     background: #270F44 0% 0% no-repeat padding-box;
     width     : 100vw;
@@ -5,6 +7,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    @include for-phone-only{
+        overflow-y: hidden;
+        overflow-x: hidden;
+    }
 
     .login-wrapper {
         display: flex;
@@ -15,11 +21,17 @@
         background   : #FFFFFF 0% 0% no-repeat padding-box;
         box-shadow   : 60px 60px 99px #00000045;
         border-radius: 47px;
+
+   
     }
 
     .side-login {
         width        : 578px;
         height       : 100%;
+        
+        @include for-phone-only {
+            width: 400px;
+        }
        
         .logo-holder{
         padding-top: 37px;
@@ -31,6 +43,7 @@
           display: flex;
           justify-content: center;
           align-items: center;
+     
         }
     }
 
@@ -38,5 +51,6 @@
         width: 572px;
         height: 599px;
         border-radius: 29px;
+
     }
 }
