--- a/src/app/shared/user-drop/user-drop.component.html
+++ b/src/app/shared/user-drop/user-drop.component.html
@@ -1,7 +1,7 @@
 <div class="user"> 
     <div class="user-menu"> 
-        <img src="/assets/img/perfil-foto.PNG" alt="" class="me-4 perfil">
-         <img src="/assets/img/Theo-Garcia.svg" alt="" >
+        <img src="/assets/img/perfil-foto.PNG" alt="" class="perfil">
+         <img src="/assets/img/Theo-Garcia.svg" alt="" *ngIf="!isMobile">
          <img src="/assets/img/chevron-down.png" alt="" class="chevron">
     </div>
 </div>
