--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,16 @@
 <div class="container w-100">
+  <div class="header-info">
+    <span class="title-dash"> Dashboard de Vendas DoubleIt </span>
+    <div class="filter-year">
+      <span class="title-dash-info me-3"> Selecionar ano </span>
+      <div class="select-year">
+        2022
+        <span class="select">
+          <img src="/assets/img/chevron-down.png" alt="" />
+        </span>
+      </div>
+    </div>
+  </div>
   <div class="row card-infos">
     <div class="col-12 col-md-6 col-lg-3">
       <div class="card my-2 mx-1 p-2">
