visualização para mobile

--- a/src/app/clientes/clientes.component.html
+++ b/src/app/clientes/clientes.component.html
@@ -2,7 +2,7 @@
   <div class="header-info">
     <div class="title-dash">
       Clientes
-      <button type="button" class="btn btn-success">
+      <button type="button" class="btn btn-success ms-2 ">
         <img src="/assets/img/adicionar.svg" alt="" /> Cadastrar Cliente
       </button>
       <button type="button" class="btn btn-danger ms-3">
@@ -122,7 +122,7 @@
             </td>
             <td class="align-middle">
               <button class="btn btn-menu" type="button">
-                <img src="/assets/img/action.PNG" alt="" />
+                <img src="/assets/img/action.svg" alt="" />
               </button>
             </td>
           </tr>
