corrigindo img no drop de usuario

--- a/src/app/shared/user-drop/user-drop.component.html
+++ b/src/app/shared/user-drop/user-drop.component.html
@@ -2,6 +2,6 @@
     <div class="user-menu"> 
         <img src="/assets/img/perfil-foto.PNG" alt="" class="perfil">
          <img src="/assets/img/Theo-Garcia.svg" alt="" *ngIf="!isMobile">
-         <img src="/assets/img/chevron-down.png" alt="" class="chevron">
+         <img src="/assets/img/Icon-arrow.svg" alt="" class="chevron">
     </div>
 </div>
